<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/desired_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desired_grade"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/letter_grade_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/letter_grade"
            android:inputType="text"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/min_avg_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_avg_required"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/min_avg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/numeric_avg"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cur_avg_required"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/cur_avg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/numeric_avg"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_per_weight"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/final_percent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/final_percent"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/my_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:textSize="18sp"
            android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/user_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_grade"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="16dp"
            android:textSize="72sp"
            android:gravity="center"/>


    </LinearLayout>

</LinearLayout>